--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://eraymeric.github.io/todo-list",
+  "homepage": "http://eraymeric.github.io/todo-list-v2",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
